--- a/index.html
+++ b/index.html
@@ -1,9 +1,103 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title> Irhaye Elvis </title>
-<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Portfolio</title>
+</head>
 <body>
+  <!-- Header -->
+  <header>
+    <nav>
+      <!-- Add navigation links if needed -->
+      <h1>My Portfolio</h1>
+    </nav>
+  </header>
 
+  <!-- Section 1: Hero -->
+  <section id="hero">
+    <div class="hero-container">
+      <img src="profile-picture.jpg" alt="Profile picture" class="hero-img">
+      <div class="hero-content">
+        <p>Hi, I'm [Your Name], a [Your Profession] passionate about [something short].</p>
+        <div class="hero-buttons">
+          <a href="#contact" class="btn">Contact Me</a>
+          <a href="#portfolio" class="btn">See My Work</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Section 2: Skills -->
+  <section id="skills">
+    <h2>Skills</h2>
+    <div class="skills-grid">
+      <img src="skill1.png" alt="Skill 1">
+      <img src="skill2.png" alt="Skill 2">
+      <img src="skill3.png" alt="Skill 3">
+      <img src="skill4.png" alt="Skill 4">
+      <img src="skill5.png" alt="Skill 5">
+      <img src="skill6.png" alt="Skill 6">
+      <img src="skill7.png" alt="Skill 7">
+      <img src="skill8.png" alt="Skill 8">
+      <img src="skill9.png" alt="Skill 9">
+      <img src="skill10.png" alt="Skill 10">
+    </div>
+  </section>
+
+  <!-- Section 3: History -->
+  <section id="history">
+    <h2>History</h2>
+    <div class="history-list">
+      <div class="history-item">
+        <img src="history1.jpg" alt="History 1">
+        <div>
+          <h3>Title 1</h3>
+          <article>
+            Brief description for this experience/project.
+          </article>
+        </div>
+      </div>
+      <div class="history-item">
+        <img src="history2.jpg" alt="History 2">
+        <div>
+          <h3>Title 2</h3>
+          <article>
+            Brief description for this experience/project.
+          </article>
+        </div>
+      </div>
+      <div class="history-item">
+        <img src="history3.jpg" alt="History 3">
+        <div>
+          <h3>Title 3</h3>
+          <article>
+            Brief description for this experience/project.
+          </article>
+        </div>
+      </div>
+      <div class="history-item">
+        <img src="history4.jpg" alt="History 4">
+        <div>
+          <h3>Title 4</h3>
+          <article>
+            Brief description for this experience/project.
+          </article>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Section 4: Contact -->
+  <section id="contact">
+    <h2>Contact</h2>
+    <div class="contact-icons">
+      <a href="mailto:your@email.com"><img src="email-icon.png" alt="Email"></a>
+      <a href="https://github.com/yourusername"><img src="github-icon.png" alt="GitHub"></a>
+      <a href="https://linkedin.com/in/yourusername"><img src="linkedin-icon.png" alt="LinkedIn"></a>
+      <a href="https://twitter.com/yourusername"><img src="twitter-icon.png" alt="Twitter"></a>
+      <a href="tel:+123456789"><img src="phone-icon.png" alt="Phone"></a>
+    </div>
+  </section>
 </body>
 </html>
