--- a/index.html
+++ b/index.html
@@ -4,25 +4,38 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
+  <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
   <!-- Header -->
   <header>
     <nav>
-      <!-- Add navigation links if needed -->
-      <h1>My Portfolio</h1>
+      <ul>
+        <li>Home</li>
+        <li>Skills</li>
+        <li>History</li>
+        <li>Contact</li>
+      </ul>
     </nav>
   </header>
 
   <!-- Section 1: Hero -->
   <section id="hero">
     <div class="hero-container">
-      <img src="profile-picture.jpg" alt="Profile picture" class="hero-img">
+      <div class="hero-image">
+        <img src="assets/src/20250917_233131.jpg" alt="Profile picture" class="image-img">
+      </div>
+      <br>
       <div class="hero-content">
-        <p>Hi, I'm [Your Name], a [Your Profession] passionate about [something short].</p>
+        <hr>
+        <h1>Hi, I'm Elvis,</h1>
+        <br>
+        <p>a software developer passionate about a clean UI, smooth animations, typography and readability.</p>
+        <hr>
+        <br>
         <div class="hero-buttons">
           <a href="#contact" class="btn">Contact Me</a>
-          <a href="#portfolio" class="btn">See My Work</a>
+          <a href="#portfolio" class="btn">Download CV</a>
         </div>
       </div>
     </div>
@@ -30,18 +43,18 @@
 
   <!-- Section 2: Skills -->
   <section id="skills">
-    <h2>Skills</h2>
+    <h2>My Skills</h2>
     <div class="skills-grid">
-      <img src="skill1.png" alt="Skill 1">
-      <img src="skill2.png" alt="Skill 2">
-      <img src="skill3.png" alt="Skill 3">
-      <img src="skill4.png" alt="Skill 4">
-      <img src="skill5.png" alt="Skill 5">
-      <img src="skill6.png" alt="Skill 6">
-      <img src="skill7.png" alt="Skill 7">
-      <img src="skill8.png" alt="Skill 8">
-      <img src="skill9.png" alt="Skill 9">
-      <img src="skill10.png" alt="Skill 10">
+      <img src="skill1.png" alt="HTML5">
+      <img src="skill2.png" alt="CSS3">
+      <img src="skill3.png" alt="JavaScript">
+      <img src="skill4.png" alt="Git">
+      <img src="skill5.png" alt="React">
+      <img src="skill6.png" alt="Figma">
+      <img src="skill7.png" alt="VScode">
+      <img src="skill8.png" alt="Batch">
+      <img src="skill9.png" alt="Terminal">
+      <img src="skill10.png" alt="Dribble">
     </div>
   </section>
 
@@ -52,7 +65,7 @@
       <div class="history-item">
         <img src="history1.jpg" alt="History 1">
         <div>
-          <h3>Title 1</h3>
+          <h3></h3>
           <article>
             Brief description for this experience/project.
           </article>
@@ -90,13 +103,13 @@
 
   <!-- Section 4: Contact -->
   <section id="contact">
-    <h2>Contact</h2>
+    <h2>Need some of my services? Feel free to contact me</h2>
     <div class="contact-icons">
-      <a href="mailto:your@email.com"><img src="email-icon.png" alt="Email"></a>
-      <a href="https://github.com/yourusername"><img src="github-icon.png" alt="GitHub"></a>
+      <a href="mailto:tony69elvis@gmail.com"><img src="email-icon.png" alt="Email"></a>
+      <a href="https://github.com/irhayeelvis"><img src="github-icon.png" alt="GitHub"></a>
       <a href="https://linkedin.com/in/yourusername"><img src="linkedin-icon.png" alt="LinkedIn"></a>
-      <a href="https://twitter.com/yourusername"><img src="twitter-icon.png" alt="Twitter"></a>
-      <a href="tel:+123456789"><img src="phone-icon.png" alt="Phone"></a>
+      <a href="https://twitter.com/irhayeElvis"><img src="twitter-icon.png" alt="Twitter"></a>
+      <a href="tel:+2348160575048"><img src="phone-icon.png" alt="Phone"></a>
     </div>
   </section>
 </body>
